# folderflow

./: Cargo.toml  README.md  config.toml
front-end/: index.html  index.js
src/: config.rs  main.rs  stream_utils.rs  zip_utils.rs
src/api/: download.rs  execute.rs  list_folders.rs  list_scripts.rs  mod.rs  upload.rs
