[package]
name = "folderflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["query", "headers", "multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
headers = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "limit"] }
walkdir = "2.3"
zip = "0.6"